@@ -33,6 +33,8 @@ ToDo:
 	- Wrap flush_dcache_mft_record_page() in #ifdef NTFS_RW.
 	- Add NInoTestSetFoo() and NInoTestClearFoo() macro magic to
 	  fs/ntfs/inode.h and use it to declare NInoTest{Set,Clear}Dirty.
+	- Move typedefs for ntfs_attr and test_t from fs/ntfs/inode.c to
+	  fs/ntfs/inode.h so they can be used elsewhere.
 
 2.1.7 - Enable NFS exporting of mounted NTFS volumes.
 
